force-app/main/default/objects/Contact/fields/EDUtb_Alumni__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated via automation

Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Alumni</label>
    <type>Checkbox</type>
</CustomField>