force-app/main/default/objects/Contact/fields/EDUtb_Current_Student__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Current_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caution: This field was installed from an Education Trailblazers Association solution. Before editing, ensure changes won&apos;t break automation.</description>
    <label>Current Student</label>
    <type>Checkbox</type>
</CustomField>