force-app/main/default/objects/Contact/fields/EDUtb_Household_Account__c.field-meta.xml
<CustomField>
    <fullName>EDUtb_Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household this person is a member of.</description>
    <label>Household Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Account is not a Household.</errorMessage>
        <filterItems>
            <field>Account.EDUtb_Record_Type_Developer_Name__c</field>
            <operation>equals</operation>
            <value>Household_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>